create registers for the fake device

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,15 @@
+version: "3.8"
+
 services:
 
   ecoadapt_power_elec:
     build:
       context: .
       dockerfile: docker/Dockerfile.ecoadapt_power_elec_fake
-      args:
-        MODBUS_IP: "172.18.0.2"
     networks:
       custom_network:
         ipv4_address: 172.18.0.2
-
-  #  exporter_ecoadapt:
-  #    build:
-  #      context: .
-  #      dockerfile: docker/Dockerfile.exporter_ecoadapt
-  #    networks:
-  #      custom_network:
-  #        ipv4_address: 172.18.0.3
+    command: ["--addr", "172.18.0.2"]
 
   cloud_server:
     build:
@@ -27,6 +20,13 @@ services:
         ipv4_address: 172.18.0.4
     command: ["--addr", "172.18.0.4", "--port", "9000"]
 
+  #  exporter_ecoadapt:
+  #    build:
+  #      context: .
+  #      dockerfile: docker/Dockerfile.exporter_ecoadapt
+  #    networks:
+  #      custom_network:
+  #        ipv4_address: 172.18.0.3
 
 networks:
   custom_network:
