app implementation finished with unit-tests. Is not really working though because is blocking when it tries to connect to the modbus server (need to fix it)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,14 @@ services:
         ipv4_address: 172.18.0.4
     command: ["--addr", "172.18.0.4", "--port", "9000"]
 
-  #  exporter_ecoadapt:
-  #    build:
-  #      context: .
-  #      dockerfile: docker/Dockerfile.exporter_ecoadapt
-  #    networks:
-  #      custom_network:
-  #        ipv4_address: 172.18.0.3
+  exporter_ecoadapt:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.exporter_ecoadapt
+    networks:
+      custom_network:
+        ipv4_address: 172.18.0.3
+    command: ["--cloud-addr", "172.18.0.4", "--modbus-addr", "172.18.0.2", "--modbus-port", "502"]
 
 networks:
   custom_network:
