--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,9 @@
-asyncio
-pymodbus
-pytest
-pytest-asyncio
-pytest-mock
+autobahn==23.1.2
+asyncio==3.4.3
+pymodbus==2.5.3
+pytest==7.4.4
+pytest-asyncio==0.21.2
+pytest-mock==3.11.1
+protobuf==4.24.4
+asynctest==0.13.0
+Twisted==22.8.0
