feat: update HACKING with more detailed info feat: rotate data in fake power elec 6 feat: add a response message in onMessage handler in cloud server refactor: improve logging. feat: create and specify a subprotocol called "exporter_ecodata_protobuf_v1" in server and client. feat: decode protobuf in server side. feat: print registers data in a nice way in both ends (server and client). fix: specify cloud server port in client. fix: unit-tests accordingly to the new implementation. feat: install a dirty default version if no git repo is found. fix: registers addresses in simulated power elect modbus server (offset issue). fix: async modbus client working properly.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3.8"
 
 services:
 
-  ecoadapt_power_elec:
+  fake_power_elec:
     build:
       context: .
-      dockerfile: docker/Dockerfile.ecoadapt_power_elec_fake
+      dockerfile: docker/Dockerfile.power_elec_fake
     networks:
       custom_network:
         ipv4_address: 172.18.0.2
-    command: ["--addr", "172.18.0.2"]
+    command: ["--addr", "172.18.0.2", "--rotate-time", "50"]
 
   cloud_server:
     build:
@@ -27,7 +27,7 @@ services:
     networks:
       custom_network:
         ipv4_address: 172.18.0.3
-    command: ["--cloud-addr", "172.18.0.4", "--modbus-addr", "172.18.0.2", "--modbus-port", "502"]
+    command: ["--cloud-addr", "ws://172.18.0.4", "--cloud-port", "9000", "--modbus-addr", "172.18.0.2", "--modbus-port", "502", "--log-level", "${LOG_LEVEL:-INFO}", "--time-interval", "60"]
 
 networks:
   custom_network:
